# vega2021

./: .gitignore  README.md  README_perso
src/: .gitignore  README  analysis_bisector.py  bayesinversion.py  contojson.py  data.json  dynspec.py  edge.py  frequencies.out  narvalsophie.py  persofile.py  pfp2 copie.py  pfp2.py  pfp2_21fev2022.py  pfp2_old.py  pfp2_rasal.py  pfp3.py  pgfit-freqlist.data  pgfit-perlist.data  picturesForPaper.py  prepare.py  profilepca.py  rotstar.py  shift_spectra.py  spectralutil.py  spectralutil_old.py  spectralutil_old_hist.py  sspectralutil.py  testPics.py  torsten.py  vradcompare.py
src-old/: .gitignore  pfp2.py  spectralutil.py
thar/: .gitignore  README  ThAr2D_voie_1.dat.json  ThAr2D_voie_1_new.json  ThAr2D_voie_1_old.dat.json  ThAr2D_voie_2.dat.json  ThAr2D_voie_3.dat.json  ThAr_Line_Cal_v2.pkl  extract.py  fitwave.ipynb  fp_write.py  func_th2D.py  lmm.py  old_ThAr2D_voie_1.dat.json  play.ipynb  rubbish_ThAr2D_voie_3.dat.json  rubbish_th2D.py  spectrograph.py  sth2D.py  sth2D_new.py  tableau.py  test_binned_data.py  testextract.py  th2D.py  th2D_master.py  th2D_new.py  thar_write.py  trash.txt  util.py  utils.py  (+1 more)
thar/nextra/: .gitignore  pyproject.toml  requirements.txt
thar/nextra/assets/: .gitignore
thar/nextra/docs/: Makefile
thar/nextra/docs/source/: conf.py  examples.rst  index.rst  intro.rst  modules.rst  nextra.rst
thar/nextra/src/nextra/: .gitignore  __init__.py  extract.py  settings_narval.py  settings_reference.py  snippets.py  spectrograph.py  utilitaires.py
thar/nextra/src/test/: test_utils.py  test_vega.py
(+88 files in other folders)
